# bluest

./: .gitattributes  .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  blue_fn.py  blue_models.py  blue_opt.py  mlmc.py  mlmc_test.py  pyproject.toml  setup.py  test_opt.py
blue/: blue_opt.py  spg.py
bluest/: __init__.py  blue_fn.py  blue_models.py  blue_opt.py  cmisc.cpp  layered_network_graph.py  misc.py  misc_opt.py  mosap.py  multi_blue_fn.py  multi_blue_models.py  multi_blue_opt.py  sap.py  spg.py
bluest/examples/: blue_example.py  get_matlab_data.py  minimal.py  multi_blue_example.py  single_blue_example.py  tutorial.py
bluest/examples/chemistry/: chemistry.py  reaction_models.py
bluest/examples/hodgkin-huxley/: another_hodgkin-huxley.py  blue_hodgkin-huxley.py  hodgkin-huxley.py  model_graph_data.npz  model_graph_data_no_Na_curr.npz  pde_hodgkin-huxley.py  plot_histograms.py  vtk_export.py
bluest/examples/navier_stokes/: NS.py  bluest-NS.npz  bluest_NS.py  bluest_log.txt  mesh_generator.py  plot_histograms.py  samples.npz
bluest/sandbox/: bak_blue_opt.py  bak_setup.py.bak  child.py  cvxpy_test.py  gp_cvxpy_test.py  gpkit_test.py  mpi_test.py  my_prog.py  opt_2.py  pygmsh_mpi_test.py  single_blue_example.py  single_blue_fn.py  test_opt.py
docker/: Dockerfile  LICENSE.md  README.md  WELCOME  fenics.env.conf  matplotlibrc  set-home-permissions.sh
examples/: README.md  multi_output_example.py  single_output_example.py
examples/paper_examples/: README.md
readme/: color_palette_logo.txt
tutorials/: 01_tutorial.ipynb  01_tutorial.py  README.md
(+34 files in other folders)
